2002-10-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00796]
	* configure: expand here. ($var in Makefile is $v + ar)
	* XMakefile: clean w3mimg/**/*.o

2002-10-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00795]
	* configure: IMLIB_CONFIG, IMLIB2_CONFIG, GDKPIXBUF_CONFIG
	* rc.c (CMT_DISP_IMAGE): need if not defined USE_IMAGE

2002-10-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 2
	* version.c.in: update

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00788]
	* fm.h (displayImage): FALSE ifndef USE_IMAGE
	* rc.c (displayImage): display_image even if USE_IMAGE undefined
		(sync_with_options): display_image is forced to be FALSE 
				ifndef USE_IMAGE

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00783] hsaka@mth.biglobe.ne.jp (Hironori SAKAMOTO)
	  add display_lineinfo option
	* display.c (displayBuffer): check displayLineInfo
	* fm.h (displayLineInfo): added
	* rc.c (CMT_DISPLINEINFO): added
		(display_lineinfo): added
	* NEWS (rc: display_lineinfo): add

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00781] "Clemens Fischer" <ino-waiting@gmx.net>
	  zope doesn't recognize implied *LWS in accept-language
	* rc.c (sync_with_option): remove optional LWS

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00780] "Carlo E. Prelz" <fluido@fluido.as>
	  always print on screen the relative position
	* display.c (displayBuffer): relative position

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 1
	* version.c.in: update

2002-10-26  Gary Johnson <garyjohn@spk.agilent.com>

	* [w3m-dev-en 00777] patch to fix w3m-0.3.1 word break problem
	* file.c (is_period_char): 
		0x203A - SINGLE RIGHT-POINTING ANGLE QUOTATION MARK
		(is_beginning_char):
		0x2018 - LEFT SINGLE QUOTATION MARK
		0x2039 - SINGLE LEFT-POINTING ANGLE QUOTATION MARK
		(is_word_char): add several chars ifndef JP_CHARSET
			add ':' and '*'
